kubernetes/2-apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-jellyfin
spec:
  type: ClusterIP
  ports:
    - name: port
      port: 8096
      protocol: TCP
