kubernetes/2-apps/jellyfin/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-jellyfin
spec:
  entryPoints:
    - websecure
    - local-https
  routes:
  - kind: Rule
    match: Host(`jellyfin.vaisanen.cloud`)
    services:
    - kind: Service
      name: svc-jellyfin
      port: 8096
  tls:
    secretName: jellyfin-certificate-secret
